[tool.poetry]
name = "dbgpt_hub"
version = "0.2.1"
description = "DB-GPT-Hub: Text-to-SQL parsing with LLMs"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "4.33.2"
peft = "0.4.0"
accelerate = "0.21.0"
bitsandbytes = "0.39.0"
einops = "0.6.1"
evaluate = "0.4.0"
scikit-learn = "1.2.2"
sentencepiece = "0.1.99"
wandb = "0.15.3"
func-timeout = "4.3.5"
datasets = ">=2.12.0"
trl = ">=0.5.0"
pydantic = "1.10.11"
deepspeed = "0.10.2"
gradio = ">=3.36.0"
uvicorn-http2 = "^0.0.0"
uvicorn = "^0.24.0.post1"
fastapi = "0.95.1"
transformers-stream-generator = "^0.0.4"
matplotlib = "^3.8.1"
sse-starlette = "^1.6.5"
tiktoken = "^0.5.1"
jieba = "^0.42.1"
rouge-chinese = "^1.0.3"
rapidfuzz = "^3.5.2"
scipy = "^1.11.3"
sqlparse = "^0.4.4"
nltk = "^3.8.1"
jsonlines = "^4.0.0"
pymysql = "1.1.0"
pyyaml = "6.0.1"
black = "^23.11.0"
pyright = "^1.1.335"
pylint = "^3.0.2"
torch = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
