[tool.poetry]
name = "dbgpt_hub"
version = "0.3.1"
description = "DB-GPT-Hub: Text-to-SQL parsing with LLMs"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
include = ["dbgpt_hub/baseline/baseline.json"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "4.34.1"
peft = "0.4.0"
accelerate = "0.21.0"
einops = "0.6.1"
evaluate = "0.4.0"
scikit-learn = "1.2.2"
sentencepiece = "0.1.99"
wandb = "0.15.3"
func-timeout = "4.3.5"
datasets = ">=2.14.6"
trl = ">=0.5.0"
pydantic = "1.10.11"
deepspeed = "0.10.2"
gradio = ">=3.36.0"
uvicorn-http2 = "^0.0.0"
uvicorn = "^0.24.0.post1"
fastapi = "0.95.1"
transformers-stream-generator = "^0.0.4"
matplotlib = "^3.8.1"
sse-starlette = "^1.6.5"
tiktoken = "^0.5.1"
jieba = "^0.42.1"
rouge-chinese = "^1.0.3"
rapidfuzz = "^3.5.2"
scipy = "^1.11.3"
sqlparse = "^0.4.4"
nltk = "^3.8.1"
jsonlines = "^4.0.0"
pymysql = "1.1.0"
pyyaml = "6.0.1"
black = "^23.11.0"
pyright = "^1.1.335"
pylint = "^3.0.2"
torch = "^2.0.0"
markupsafe = "2.1.3"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "8.9.2.26"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.18.1"
nvidia-nvtx-cu12 = "12.1.105"
triton = "2.1.0"
nvidia-nvjitlink-cu12 = "^12.3.52"
prettytable = "^3.9.0"
docopt = "^0.6.2"
bitsandbytes = "0.41.3.post2"
openai = "^1.6.1"
jaro-winkler = "2.0.3"
antlr4-python3-runtime = "4.13.2"
JPype1 = "1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"